<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

        <TextView
            android:id="@+id/btn_selected_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:text="펠리세이드"
            android:textColor="@color/gray_800"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/selector_btn_selected_car"
            app:layout_constraintBottom_toBottomOf="@+id/iv_logo"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toTopOf="@id/gl_top" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="37dp"
            android:layout_height="37dp"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toTopOf="@id/gl_top"
            app:srcCompat="@drawable/logo_main" />

        <TextView
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_exit"
            android:textColor="@color/gray_800"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_logo"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintTop_toTopOf="@id/gl_top" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            app:tabIndicatorColor="@color/primary_color_500"
            app:tabSelectedTextColor="@color/primary_color_500"
            app:tabTextAppearance="@style/TabTextStyle"
            app:tabTextColor="@color/gray_200">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_trim" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_type" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_exterior" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_interior" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_option" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_confirm" />

        </com.google.android.material.tabs.TabLayout>


        <androidx.fragment.app.FragmentContainerView
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toTopOf="@id/btn_select"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_step"
            app:navGraph="@navigation/nav_graph" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_select"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/primary_color_700"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="선택하기" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>